Fix label left align

--- a/frontend-service/src/ui/views/_components/DataViewer/_components/FieldEditor/FieldEditor.module.scss
+++ b/frontend-service/src/ui/views/_components/DataViewer/_components/FieldEditor/FieldEditor.module.scss
@@ -15,6 +15,7 @@
     color: var(--main-font-color);
     font-size: 0.9em;
     font-weight: bold;
+    padding-left: 0;
   }
   > div {
     display: flex;
